--- a/connect4/connect4.html
+++ b/connect4/connect4.html
@@ -1,120 +1,77 @@
 <!doctype html>
 <html>
-    <head>
-      <title>Connect4 by Aidan</title>
-      <link rel="stylesheet" 
-            href="connect4.css" 
-            type="text/css">
-    </head>
-    <body>
-      <script src="connect4.js"
-              type="text/javascript"></script>
-      <h1 id="title">Connect 4</h1>
-      <div id="grid">
-        <div class="row"
-              id ="row-0">
-          <div class="column"
-              id="row-0-column-0"></div>
-          <div class="column"
-              id="row-0-column-1"></div>
-          <div class="column"
-              id="row-0-column-2"></div>
-          <div class="column"
-              id="row-0-column-3"></div>
-          <div class="column"
-              id="row-0-column-4"></div>
-          <div class="column"
-              id="row-0-column-5"></div>
-          <div class="column"
-              id="row-0-column-6"></div>
+
+<head>
+    <title>Connect4 by Aidan</title>
+    <link rel="stylesheet" href="connect4.css" type="text/css">
+</head>
+
+<body>
+
+    <h1 id="title">Connect 4</h1>
+    <div id="grid">
+        <div class="row" id="row-0">
+            <div class="column" id="row-0-column-0"></div>
+            <div class="column" id="row-0-column-1"></div>
+            <div class="column" id="row-0-column-2"></div>
+            <div class="column" id="row-0-column-3"></div>
+            <div class="column" id="row-0-column-4"></div>
+            <div class="column" id="row-0-column-5"></div>
+            <div class="column" id="row-0-column-6"></div>
         </div>
-        <div class="row"
-              id ="row-1">
-          <div class="column"
-              id="row-1-column-0"></div>
-          <div class="column"
-              id="row-1-column-1"></div>
-          <div class="column"
-              id="row-1-column-2"></div>
-          <div class="column"
-              id="row-1-column-3"></div>
-          <div class="column"
-              id="row-1-column-4"></div>
-          <div class="column"
-              id="row-1-column-5"></div>
-          <div class="column"
-              id="row-1-column-6"></div>
+        <div class="row" id="row-1">
+            <div class="column" id="row-1-column-0"></div>
+            <div class="column" id="row-1-column-1"></div>
+            <div class="column" id="row-1-column-2"></div>
+            <div class="column" id="row-1-column-3"></div>
+            <div class="column" id="row-1-column-4"></div>
+            <div class="column" id="row-1-column-5"></div>
+            <div class="column" id="row-1-column-6"></div>
         </div>
-        <div class="row"
-              id ="row-2">
-          <div class="column"
-              id="row-2-column-0"></div>
-          <div class="column"
-              id="row-2-column-1"></div>
-          <div class="column"
-              id="row-2-column-2"></div>
-          <div class="column"
-              id="row-2-column-3"></div>
-          <div class="column"
-              id="row-2-column-4"></div>
-          <div class="column"
-              id="row-2-column-5"></div>
-          <div class="column"
-              id="row-2-column-6"></div>
+        <div class="row" id="row-2">
+            <div class="column" id="row-2-column-0"></div>
+            <div class="column" id="row-2-column-1"></div>
+            <div class="column" id="row-2-column-2"></div>
+            <div class="column" id="row-2-column-3"></div>
+            <div class="column" id="row-2-column-4"></div>
+            <div class="column" id="row-2-column-5"></div>
+            <div class="column" id="row-2-column-6"></div>
         </div>
-        <div class="row"
-              id ="row-3">
-          <div class="column"
-              id="row-3-column-0"></div>
-          <div class="column"
-              id="row-3-column-1"></div>
-          <div class="column"
-              id="row-3-column-2"></div>
-          <div class="column"
-              id="row-3-column-3"></div>
-          <div class="column"
-              id="row-3-column-4"></div>
-          <div class="column"
-              id="row-3-column-5"></div>
-          <div class="column"
-              id="row-3-column-6"></div>
+        <div class="row" id="row-3">
+            <div class="column" id="row-3-column-0"></div>
+            <div class="column" id="row-3-column-1"></div>
+            <div class="column" id="row-3-column-2"></div>
+            <div class="column" id="row-3-column-3"></div>
+            <div class="column" id="row-3-column-4"></div>
+            <div class="column" id="row-3-column-5"></div>
+            <div class="column" id="row-3-column-6"></div>
         </div>
-        <div class="row"
-              id ="row-4">
-          <div class="column"
-              id="row-4-column-0"></div>
-          <div class="column"
-              id="row-4-column-1"></div>
-          <div class="column"
-              id="row-4-column-2"></div>
-          <div class="column"
-              id="row-4-column-3"></div>
-          <div class="column"
-              id="row-4-column-4"></div>
-          <div class="column"
-              id="row-4-column-5"></div>
-          <div class="column"
-              id="row-4-column-6"></div>
+        <div class="row" id="row-4">
+            <div class="column" id="row-4-column-0"></div>
+            <div class="column" id="row-4-column-1"></div>
+            <div class="column" id="row-4-column-2"></div>
+            <div class="column" id="row-4-column-3"></div>
+            <div class="column" id="row-4-column-4"></div>
+            <div class="column" id="row-4-column-5"></div>
+            <div class="column" id="row-4-column-6"></div>
         </div>
-        <div class="row"
-              id ="row-5">
-          <div class="column"
-              id="row-5-column-0"></div>
-          <div class="column"
-              id="row-5-column-1"></div>
-          <div class="column"
-              id="row-5-column-2"></div>
-          <div class="column"
-              id="row-5-column-3"></div>
-          <div class="column"
-              id="row-5-column-4"></div>
-          <div class="column"
-              id="row-5-column-5"></div>
-          <div class="column"
-              id="row-5-column-6"></div>
+        <div class="row" id="row-5">
+            <div class="column" id="row-5-column-0"></div>
+            <div class="column" id="row-5-column-1"></div>
+            <div class="column" id="row-5-column-2"></div>
+            <div class="column" id="row-5-column-3"></div>
+            <div class="column" id="row-5-column-4"></div>
+            <div class="column" id="row-5-column-5"></div>
+            <div class="column" id="row-5-column-6"></div>
         </div>
-      </div>
-      </br></br></br>
-      <button id="reset-button">Reset Game</button>
-    </body>
+    </div>
+    <div id="yellow-counter">🟡</div>
+    <div id="red-counter">🔴</div>
+    <div id="winner-name"></div>
+    <div id="winner-display"></div>
+    </br></br></br>
+    <button id="reset-button">Reset Game</button>
+    <script src="connect4.js" type="text/javascript"></script>
+</body>
+
 </html>
