--- a/connect4/connect4.html
+++ b/connect4/connect4.html
@@ -21,6 +21,9 @@
         <input id="player2Name" type="text"/>
         <button id="p2Submit" type="submit">Submit</button>
     </form>
+    <!-- <p id="red-score">
+        Red Score
+    </div> -->
     <div id="grid">
         <div class="row" id="row-0">
             <div class="column" id="row-0-column-0"></div>
@@ -85,6 +88,8 @@
     <button id="start-game">Start Game</button>
     <br>
     <button id="reset-button">Reset Game</button>
+    <br>
+    <!-- <button id="reset-score-button">Reset Score</button> -->
     <script src="connect4.js" type="text/javascript">
     </script>
 </body>
